--- a/dev/askdjango/blog/templates/blog/post_list.html
+++ b/dev/askdjango/blog/templates/blog/post_list.html
@@ -18,7 +18,10 @@
 <ul> <!-- ul은 Unordered List의 약자이다. 순서가 필요없는 목록을 생성함. -->
 {% for post in post_list %}	<!-- {%는 django function을 사용하겠다는 의미이다. -->
 	<li> <!-- li는 List Item의 약자이다. <ol>과 <ul>의 각 항목들을 나열할 때 <li> 태그를 사용함.-->
-		{{ post.title }}
+		{{ post.pk }}
+		<a href="/blog/{{ post.pk }}/">
+			{{ post.title }}
+		</a>
 	</li>
 {% endfor %}
 </ul>
