blog/post_detail.html 에서 정말 필연적으로 중복이 생겼음.

--- a/dev/askdjango/blog/templates/blog/post_detail.html
+++ b/dev/askdjango/blog/templates/blog/post_detail.html
@@ -1,3 +1,17 @@
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<title>AskDjango 블로그</title>
+</head>
+<body>
+
+<h1>AskDjango</h1>
+
+<p>
+여러분의 파이썬/장고 페이스메이커가 되겠습니다.
+</p>
+
 <h1>{{ post.title }}</h1>
 
 {{ post.content|linebreaks }} <!-- linebreaks를 써주지 않으면 웹브라우저에서 <br>이 작동하지 않는다. -->
@@ -5,3 +19,6 @@
 <hr/> <!-- 가로 선(구분선, 수평선)을 긋는 태그 -->
 
 <a hred="/blog/">목록으로</a>
+
+</body>
+</html>
