--- a/dev/askdjango/blog/templates/blog/post_detail.html
+++ b/dev/askdjango/blog/templates/blog/post_detail.html
@@ -1,24 +1,13 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="utf-8" />
-	<title>AskDjango 블로그</title>
-</head>
-<body>
+{% extends "blog/layout.html" %} <!-- 상속은 반드시 코드의 최상단에 작성해야 한다. -->
 
-<h1>AskDjango</h1>
+<!--
+부모 템플릿: blog/layout.html (중복으로 쓰이는 내용을 정의함)
+자식 템플릿: blog/post_list.html (중복되는 코드는 부모 템플릿의 내용을 상속받기 때문에 중복 배제됨)
+-->
 
-<p>
-여러분의 파이썬/장고 페이스메이커가 되겠습니다.
-</p>
-
-<h1>{{ post.title }}</h1>
-
-{{ post.content|linebreaks }} <!-- linebreaks를 써주지 않으면 웹브라우저에서 <br>이 작동하지 않는다. -->
-
-<hr/> <!-- 가로 선(구분선, 수평선)을 긋는 태그 -->
-
-<a hred="/blog/">목록으로</a>
-
-</body>
-</html>
+{% block content %}
+	<h1>{{ post.title }}</h1>
+	{{ post.content|linebreaks }}
+	<hr/>
+	<a href="/blog/">목록으로</a>
+{% endblock %}
