--- a/dev/askdjango/blog/templates/blog/layout.html
+++ b/dev/askdjango/blog/templates/blog/layout.html
@@ -4,7 +4,10 @@
 		<meta charset="utf-8" />
 		<title>AskDjango 블로그</title>
 		<style>
-			body { background-color: #FFFDF4; }
+			body { background-color: #002b36; }
+			body { color: #93a1a1; }
+			a:link { color: #93a1a1; }
+			a:visited { color: #d33682; }
 		</style>
 		<!-- <script></script> -->
 	</head>
