--- a/dev/askdjango/blog/templates/blog/layout.html
+++ b/dev/askdjango/blog/templates/blog/layout.html
@@ -1,25 +1,4 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>AskDjango 블로그</title>
-		<style>
-			body { background-color: #002b36; }
-			body { color: #93a1a1; }
-			a:link { color: #93a1a1; }
-			a:visited { color: #d33682; }
-		</style>
-		<!-- <script></script> -->
-	</head>
-	<body>
-		<h1>AskDjango</h1>
+{% extends "layout.html" %}
 
-		<p>
-		여러분의 파이썬/장고 페이스메이커가 되겠습니다.
-		</p>
-
-		나머지 이 부분에 post_list/post_detail 에서의 내용을 채워넣을 예정
-		{% block content %} <!-- 자식 템플릿이 들어올 수 있는 공간을 block으로 정의한다. -->
-		{% endblock %}
-	</body>
-</html>
+{% block extra_head %}
+{% endblock %}
