--- a/dev/askdjango/askdjango/templates/layout.html
+++ b/dev/askdjango/askdjango/templates/layout.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<!-- 프로젝트 전반적으로 사용할 파일(layout.html)은 askdjango/templates/layout.html에 정의했다. -->
+<!-- 프로젝트 전반적으로 사용할 파일(layout.html)은 askdjango/templates/layout.html에 정의했다. 
+프로젝트 디렉토리에 templates 디렉토리는 없으므로 생성해야 한다.
+-->
 <html>
     <head>
         <meta charset="utf-8" />
