timesince 예시 구현

--- a/dev/askdjango/blog/templates/blog/post_list.html
+++ b/dev/askdjango/blog/templates/blog/post_list.html
@@ -18,6 +18,7 @@
 			<a href="/blog/{{ post.pk }}/">
 				{{ post.title }}
 			</a>
+			<small>({{ post.created_at|timesince }})</small>
 		</li>
 	{% endfor %}
 	</ul>
