--- a/dev/askdjango/blog/templates/blog/post_detail.html
+++ b/dev/askdjango/blog/templates/blog/post_detail.html
@@ -9,5 +9,5 @@
 	<h1>{{ post.title }}</h1>
 	{{ post.content|linebreaks }}
 	<hr/>
-	<a href="/blog/">목록으로</a>
+	<a href="{% url "post_list" %}">목록으로</a>
 {% endblock %}
