--- a/dev/askdjango/blog/templates/blog/post_detail.html
+++ b/dev/askdjango/blog/templates/blog/post_detail.html
@@ -9,5 +9,5 @@
 	<h1>{{ post.title }}</h1>
 	{{ post.content|linebreaks }}
 	<hr/>
-	<a href="{% url "post_list" %}">목록으로</a> <!-- 뷰를 지정해서 URL을 자동으로 계산한다. -->
+	<a href="{% url "blog:post_list" %}">목록으로</a> <!-- blog 앱의 뷰(post_list)를 지정해서 URL을 자동으로 계산한다. (Django를 유연하게 사용할 수 있음) -->
 {% endblock %}
